Created index.html and tweets.html with required structure and content

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Annick Ujeneza | My First Portfolio</title>
+  <title>Annick Ujeneza | Portfolio</title>
 </head>
 <body>
   <header>
@@ -34,7 +34,7 @@
   </main>
 
   <footer>
-    <p>Annick Ujeneza > <a href="https://github.com/123annio">target</a></p>
+    <p>Made by Annick Ujeneza - <a href="https://github.com/123annio" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
