--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -17,14 +17,12 @@
       <h1>My Favorite Tweet</h1>
       <p>Here’s a tweet I found inspiring:</p>
 
-      <!-- Embedded Tweet -->
       <blockquote class="twitter-tweet">
         <p lang="en" dir="ltr">“Success is not final, failure is not fatal: It is the courage to continue that counts.”</p>
         &mdash; Winston Churchill
         <a href="https://twitter.com/TwitterDev/status/560070183650213889">January 27, 2015</a>
       </blockquote>
 
-      <!-- Link back to homepage -->
       <p><a href="index.html">← Back to homepage</a></p>
     </article>
 
@@ -34,10 +32,9 @@
   </main>
 
   <footer>
-    <p>Annick Ujeneza > <a href="https://github.com/123annio">target</a></p>
+    <p>Made by Annick Ujeneza - <a href="https://github.com/123annio" target="_blank">here</a></p>
   </footer>
 
-  <!-- Twitter Embed Script -->
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
