Added learner table to index.html for Task 4

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Annick Ujeneza | Portfolio</title>
+  <title>Annick Ujeneza | My First Portfolio</title>
 </head>
 <body>
   <header>
@@ -26,6 +26,42 @@
       <a href="https://www.alxafrica.com/" target="_blank">
         <img src="https://i.ibb.co/gDZJTZB/ALX-Logo-07.png" alt="ALX Logo" width="200">
       </a>
+
+      <!-- Learner Table -->
+      <div>
+        <h3>Meet Some Learners</h3>
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </article>
 
     <aside>
