Finalized personal portfolio webpage with all checklist requirements

--- a/html_basic/portfolio/index.html
+++ b/html_basic/portfolio/index.html
@@ -55,8 +55,8 @@
   <!-- About Me Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I'm currently pursuing a Bachelor of Honors in Software Engineering at AUCA. My background includes strategic planning for donor-funded programs, workshop facilitation, and technical troubleshooting in JavaScript, C, and Linux environments.</p>
-    <p>I'm passionate about integrating visual design and technical skills to differentiate myself in global markets.</p>
+    <p>I’m currently pursuing a Bachelor of Honors in Software Engineering at AUCA. My background includes strategic planning for donor-funded programs, workshop facilitation, and technical troubleshooting in JavaScript, C, and Linux environments.</p>
+    <p>I’m passionate about integrating visual design and technical skills to differentiate myself in global markets.</p>
   </section>
 
   <!-- Contact Section -->
